@@ -1,3 +1,9 @@
+2011-01-12  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* win/tcl.m4:         handle --enable-64bit=ia64 for gcc
+	* win/configure.in    typo
+	* win/configure:      (autoconf-2.59)
+
 2011-01-06   Kevin Walzer <wordtech@users.sourceforge.net>
 
 	* macosx/README: 	Added info on textured background windows.
